# fakeshake

./: LICENSE  LICENSE-SPREAD  Makefile  Makefile.in  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  comms.c  comms.h  config.h  config.h.in  fake.c  fake.h  fake_spread.c  fake_spread.h  fakeaccel.c  fakeaccel.h  fakeposition.txt  fakeshake.c  fakeshake.h  main.c  publisher.c  publisher.h
src/.deps/: comms.Po  fake.Po  fakeaccel.Po  main.Po
